version x Unreleased
	* jug.backend.base_store has 1 new method 'listlocks'
	* jug.backend.base_lock has 2 new methods 'fail' and 'is_failed'
	* Add 'jug execute --keep-failed' to preserve locks on failing tasks.
	* Add 'jug cleanup --failed-only' to remove locks from failed tasks
	* 'jug status' and 'jug graph' now display failed tasks

version 1.6.9 Tue Aug 6 2019 by luispedro
	* Fix saving on newer version of numpy

version 1.6.8 Wed July 10 2019 by luispedro
	* Add `cached_glob()` function
	* Fix NoLoad (issue #73)
	* Fix `jug shell`'s invalidate function with Tasklets (issue #77)

version 1.6.7 Fri Apr 13 2018 by luispedro
	* Fix issue with deeply recursive dependency structures and barrier()
	* Allow mapreduce.map() results to be used as dependencies

version 1.6.6 Sat Apr  7 by luispedro
	* Fix bug in shell's invalidate() function
	* Fix wrong dependency handling with mapreduce.map()

version 1.6.5 Mon Mar 12 by luispedro
	* Add get_tasks() to 'jug shell' and document 'from jug.task import
	alltasks' (patch by Renato Alves)

version 1.6.4 Wed Nov 1 by luispedro
	* Fix exit_after_n_tasks. It would previously execute one task too many

version 1.6.3 Wed Nov 1 by luispedro
	* Add citation request

version 1.6.2 Thu Oct 26 by luispedro
	* Add return_value argument to jug_execute
	* Add exit_env_vars

version 1.6.1 Thu Aug 29 by luispedro
	* Fix bug with `invalidate()` in the shell

version 1.6.0 Thu Aug 24 by luispedro
	* Add 'graph' subcommand - Generates a graph of tasks
	* 'jug execute --keep-going' now ends with non-zero exit code in case of failures
	* Fix bug with cleanup in dict_store not providing the number of removed records
	* Add 'jug cleanup --keep-locks' to remove obsolete results without affecting locks

version 1.5.0 Sun Jul 16 2017 by luispedro
	* Add 'demo' subcommand
	* Add is_jug_running() function
	* Fix bug in finding config files
	* Improved --debug mode: check for unsupported recursive task creation